[package]
name = "stream-future-impl"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
categories = ["stream", "future", "no-std"]
description = "Implement an async iterator with return value."
edition = "2021"
keywords = ["stream", "future"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/stream-future"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
