[package]
name = "stream-future"
version = "0.4.1"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
categories = ["asynchronous", "no-std"]
description = "Implement an async iterator with return value."
edition = "2021"
keywords = ["stream", "future"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/stream-future"

[dependencies]
stream-future-impl = { path = "../stream-future-impl", version = "0.4" }
futures-core = "0.3"
pin-project = "1.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"
